Fixed alignment of pieces

--- a/siddhartha/ttt/styles.css
+++ b/siddhartha/ttt/styles.css
@@ -5,22 +5,32 @@ body {
 }
 
 .game-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 166px);
-    grid-template-rows: repeat(3, 166px);
+    background-image: url('board.svg');
     width: 500px;
     height: 500px;
-    margin: 40px 0;
-    background-image: url('board.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game-grid-2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 80%;
+    height: 80%;
+    position: relative;
 }
 
 .square {
-    width: 166px;
-    height: 166px;
+    /*width: 166px;*/
+    /*height: 166px;*/
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
